--- a/changes.txt
+++ b/changes.txt
@@ -1,3 +1,6 @@
+January 27, 2025
+updating some methods with RGD Core and ignoring frequency of 0 for variants
+
 March 4, 2024
 updated for new file naming
 
